# z-tokens

./: .gitignore  passwg.bash  passwg.cl  passwg.json  passwg.lisp  passwg.py  passwordmeter.html  passwordmeter.js  readme.md  tokeng  tokeng.bash  tokeng.py
attic/python/: tokeng.py
documentation/: readme.md  readme.rst
documentation/help/: main.txt
documentation/licensing/: notice.txt
documentation/manuals/: main--help.txt
documentation/readme/: readme.html  readme.md  readme.txt
documentation/sbom/: cyclonedx.json  sbom.html  sbom.md  sbom.txt
documentation/specifications/: exchange-crypto.txt  exchange-design.html  exchange-design.md  exchange-design.txt  exchange-flow.dot  links.txt
documentation/tests/: _descriptors.txt  exchange--armor--empty.txt  exchange--armor--hello.txt  exchange--armor--notice.txt  exchange--encrypt--associated-only--empty.txt  exchange--encrypt--associated-only--hello--with-associated.txt  exchange--encrypt--associated-only--hello.txt  exchange--encrypt--associated-only--notice.txt  exchange--encrypt--ballast-only--empty.txt  exchange--encrypt--ballast-only--hello--with-associated.txt  exchange--encrypt--ballast-only--hello.txt  exchange--encrypt--ballast-only--notice.txt  exchange--encrypt--loops--none--hello.txt  exchange--encrypt--loops--with-1--hello.txt  exchange--encrypt--loops--with-2--hello.txt  exchange--encrypt--loops--with-3--hello.txt  exchange--encrypt--loops--with-4--hello.txt  exchange--encrypt--namespaces--empty--hello.txt  (+406 more)
python/: readme.rst
rust/: .gitignore
rust/sources/: Cargo.toml  bin.rs  entropy.rs  generator.rs  lib.rs  memory.rs  model.rs  output.rs  patterns.rs  patterns_consts_ascii.in  patterns_consts_bip0039.in  patterns_consts_mnemonic.in  patterns_count_call_with.in  prelude.rs  randomizer.rs  tool.rs  tools.rs  tools_flags.rs  tools_generate.rs  tools_patterns.rs
rust/sources/tools_manuals/: main--help.txt
scripts/: _z-run  cargo-all.z-run  cargo-build.z-run  cargo-cross.z-run  cargo-delegate.z-run  cargo-dependencies.z-run  cargo-documentation.z-run  cargo-remote.z-run  cargo-shortcuts.z-run  cargo-tools.z-run  deploy.z-run  documentation-all.z-run  documentation-markdown.z-run  documentation-readme.z-run  documentation-sbom.z-run  generate.z-run  readme.z-run  sbom.z-run  sources-embedded.z-run  sources-grep.z-run  tests-exchange.z-run  tests-hashes.z-run  tests-misc.z-run  tests.z-run  workbench-environment.z-run  workbench-tools.z-run  workbench-watch.z-run
sources/: Cargo.toml  _embedded  allocator.rs  bin.rs  entropy.rs  entropy_estimates.rs  generator.rs  lib.rs  memory.rs  model.rs  output.rs  patterns.rs  patterns_consts.rs  patterns_count_list.in  patterns_glyphs.rs  patterns_glyphs_macros.in  patterns_separators.rs  patterns_separators_macros.in  patterns_tokens.rs  prelude.rs  randomizer.rs  sensitive.rs  sensitive_macros.in  tokeng.json  tokeng.py  tools.rs  tools_flags.rs  tools_generate.rs  tools_patterns.rs
sources/.embedded/manuals/: main--help.txt
sources/.embedded/sbom/: sbom.txt
sources/_embedded/manuals/: help--footer.txt  help--header.txt
sources/_embedded/readme/: readme.html  readme.txt
sources/_embedded/sbom/: sbom.html  sbom.json
sources/_generated/: patterns_consts_eff_large.in  patterns_consts_pgp_even.in  patterns_consts_skey.in
sources/bins/: encodings.rs  exchange.rs  hashes.rs  oracles.rs  patterns.rs  secrets.rs  tools.rs
sources/encodings/: Cargo.toml
sources/encodings-tool/: Cargo.toml  tool.rs
sources/exchange/: Cargo.toml  armor.rs  coding.rs  crypto.rs  crypto_backend.rs  crypto_defs.rs  crypto_frontend.rs  crypto_keys.rs  crypto_utils.rs  keys.rs  lib.rs  macros.rs  oracles.rs  ssh.rs  ssh_common.rs  ssh_disabled.rs  ssh_enabled.rs  ssh_no.rs  ssh_oracle.rs
sources/exchange-tool/: Cargo.toml  armor.rs  coding.rs  crypto.rs  flags.rs  io.rs  keys.rs  lib.rs  low.rs  macros.rs  prelude.rs  ssh.rs  ssh_no.rs  tool.rs
sources/exchange-tool-go/: decrypt.go  go.mod  go.sum  main.go
sources/exchange-tool-go/cmd/: test.go
sources/exchange-tool-go/lib/: abort.go  bech32.go  consts.go  debug.go  decrypt.go  ssh.go  types.go
sources/hashes/: Cargo.toml  format.rs  hashes.rs  inputs.rs  lib.rs  model.rs
sources/hashes-tool/: Cargo.toml  format.rs  hashes.rs  inputs.rs  lib.rs  model.rs  tool.rs
sources/oracles/: Cargo.toml  lib.rs  pkcs11.rs
sources/oracles-tool/: Cargo.toml  lib.rs  model.rs  pkcs11.rs  tool.rs
sources/patterns/: Cargo.toml  entropy.rs  entropy_estimates.rs  generator.rs  lib.rs  memory.rs  model.rs  output.rs  patterns.rs  patterns_consts.rs  patterns_glyphs.rs  patterns_glyphs_macros.in  patterns_macros.rs  patterns_tokens.rs  patterns_tokens_macros.in  prelude.rs  randomizer.rs  sensitive.rs  sensitive_macros.in
sources/patterns-definitions/: Cargo.toml  all.rs  consts.rs  consts_eff_short.in  consts_eff_unique.in  consts_pets_common.in  consts_pgp_odd.in  glyphs.rs  glyphs_macros.in  lib.rs  macros.rs  prelude.rs  separators.rs  separators_macros.in  tokens.rs  tokens_macros.in
sources/patterns-tool/: Cargo.toml  flags.rs  generate.rs  lib.rs  patterns.rs  prelude.rs
sources/patterns/_generated/: patterns_consts_pets_medium.in  patterns_consts_pets_small.in
sources/runtime/: Cargo.toml  allocator.rs  crypto.rs  crypto_macros.in  errors.rs  flags.rs  lib.rs  memory.rs  preludes.rs  random.rs  sensitive.rs  sensitive_macros.in  sensitive_memory.rs
sources/runtime-codings/: Cargo.toml  lib.rs
sources/runtime-crypto/: Cargo.toml  lib.rs  macros.in  utils.rs
sources/runtime-flags/: Cargo.toml  flags.rs  lib.rs
sources/runtime-hashes/: Cargo.toml  lib.rs
sources/runtime-lkkrs/: Cargo.toml  lib.rs  utils.rs
sources/runtime-pinentry/: Cargo.toml  lib.rs  utils.rs
sources/runtime-random/: Cargo.toml  lib.rs
sources/secrets/: Cargo.toml  lib.rs
sources/secrets-tool/: Cargo.toml  tool.rs
sources/tools/: Cargo.toml  _embedded  bin.rs  bins.rs  embeddings.rs  lib.rs  main_helpers.rs  main_specials.rs  mains.rs  premains.rs  runtime.rs  tools.rs
sources/workspace/: Cargo.toml  bin.rs
(+192 files in other folders)
