
[package]

name = "z-tokens"
version = "0.1.0"
publish = false

edition = "2021"
rust-version = "1.63"
resolver = "2"

autobins = false
autoexamples = false
autotests = false
autobenches = false




[[bin]]
name = "z-tokens"
path = "./bin.rs"

[lib]
name = "z_tokens"
path = "./lib.rs"




[features]

default = [
	"zt-patterns-all",
	"zt-embedded-basic",
	"zt-embedded-readme",
]


development = [
	"zt-patterns-basic",
]

release = [
	"zt-patterns-all",
	"zt-embedded-all",
	"zt-runtime-allocator",
]


zt-runtime-allocator = []


zt-embedded-all = [
	"zt-embedded-basic",
	"zt-embedded-readme",
	"zt-embedded-sbom",
	"zt-embedded-sources",
	"zt-embedded-build-meta",
]
zt-embedded-basic = [
	"zt-embedded-help",
]
zt-embedded-readme = []
zt-embedded-help = []
zt-embedded-sbom = []
zt-embedded-sources = []
zt-embedded-build-meta = []


zt-patterns-all = [
	"zt-patterns-basic",
	"zt-patterns-extra",
]
zt-patterns-basic = [
	"zt-patterns-digits-basic",
	"zt-patterns-ascii",
]
zt-patterns-extra = [
	"zt-patterns-digits-extra",
	"zt-patterns-consonant-vowel",
	"zt-patterns-proquint",
	"zt-patterns-koremutake",
	"zt-patterns-mnemonic",
	"zt-patterns-bip0039",
	"zt-patterns-skey",
	"zt-patterns-pgp",
	"zt-patterns-eff-all",
	"zt-patterns-nato",
	"zt-patterns-uuid",
	"zt-patterns-ip",
	"zt-patterns-bytes",
	"zt-patterns-timestamp",
	"zt-patterns-flake",
]

zt-patterns-digits-all = [
	"zt-patterns-digits-basic",
	"zt-patterns-digits-extra",
]
zt-patterns-digits-basic = [
	"zt-patterns-digits-base10",
	"zt-patterns-digits-base16",
]
zt-patterns-digits-extra = [
	"zt-patterns-digits-base2",
	"zt-patterns-digits-base8",
	"zt-patterns-digits-base32",
	"zt-patterns-digits-base64",
	"zt-patterns-digits-base58",
	"zt-patterns-digits-base62",
	"zt-patterns-digits-bech32",
	"zt-patterns-digits-z85",
]
zt-patterns-digits-base10 = []
zt-patterns-digits-base2 = []
zt-patterns-digits-base8 = []
zt-patterns-digits-base16 = []
zt-patterns-digits-base32 = []
zt-patterns-digits-base64 = []
zt-patterns-digits-base58 = []
zt-patterns-digits-base62 = []
zt-patterns-digits-bech32 = []
zt-patterns-digits-z85 = []

zt-patterns-ascii = []
zt-patterns-consonant-vowel = []
zt-patterns-proquint = []
zt-patterns-koremutake = []
zt-patterns-mnemonic = []
zt-patterns-bip0039 = []
zt-patterns-skey = []
zt-patterns-pgp = []
zt-patterns-eff-all = [
	"zt-patterns-eff-large",
	"zt-patterns-eff-short",
	"zt-patterns-eff-unique",
]
zt-patterns-eff-large = []
zt-patterns-eff-short = []
zt-patterns-eff-unique = []
zt-patterns-nato = []
zt-patterns-uuid = []
zt-patterns-ip = []
zt-patterns-bytes = []
zt-patterns-timestamp = []
zt-patterns-flake = []




[dependencies]
vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }
vrl-random = { version = "*", default-features = false, features = [] }
rand = { version = "*", default-features = false, features = ["std", "std_rng", "getrandom", "small_rng"] }
num-bigint = { version = "*", default-features = false, features = ["std"] }
num-traits = { version = "*", default-features = false, features = ["std"] }
paste = { version = "*", default-features = false, features = [] }
argparse = { version = "*", default-features = false, features = [] }
chrono = { version = "*", default-features = false, features = ["alloc", "clock"] }
platform-info = { version = "*", default-features = false, features = [] }
memsec = { version = "*", default-features = false, features = ["default"] }
zeroize = { version = "*", default-features = false, features = ["std", "alloc"] }




[patch.crates-io]

# vrl-errors = { path = "../.dependencies/volution-rust-libraries/errors" }
# vrl-preludes = { path = "../.dependencies/volution-rust-libraries/preludes" }
# vrl-random = { path = "../.dependencies/volution-rust-libraries/random" }

vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-preludes = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-random = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }








[profile.dev]
incremental = true
codegen-units = 1024
opt-level = 0
lto = "off"
debug = 2
debug-assertions = true
overflow-checks = true
panic = "unwind"
#! split-debuginfo = "unpacked"

[profile.test]
incremental = true
codegen-units = 1024
opt-level = 0
lto = "off"
debug = 2
debug-assertions = true
overflow-checks = true
#! split-debuginfo = "unpacked"

[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
debug-assertions = false
overflow-checks = true
panic = "abort"
split-debuginfo = "off"

[profile.bench]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
debug-assertions = false
overflow-checks = true
#! split-debuginfo = "unpacked"


[profile.dev.package."*"]
incremental = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
#! split-debuginfo = "unpacked"


[profile.dev.build-override]
incremental = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
#! split-debuginfo = "unpacked"


[profile.release.build-override]
incremental = false
codegen-units = 1
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = true
#! split-debuginfo = "unpacked"

