

[package]

name = "z-tokens"
version = "0.1.0"
publish = false

edition = "2021"
rust-version = "1.63"

autobins = false
autoexamples = false
autotests = false
autobenches = false

workspace = "./workspace"




[[bin]]

name = "z-tokens"
path = "./bin.rs"




[features]

default = [ "z-tokens-tools/default" ]
development = [ "z-tokens-tools/development" ]
release = [ "z-tokens-tools/release" ]




[dependencies]

z-tokens-tools = { path = "./tools" }


