

[package]

name = "z-tokens"

workspace = "./workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[[bin]]

name = "z-tokens"
path = "./bins/tools.rs"


[[bin]]

name = "z-hashes"
path = "./bins/hashes.rs"


[[bin]]

name = "z-exchange"
path = "./bins/exchange.rs"




[features]

default = [ "z-tokens-tools/default" ]
development = [ "z-tokens-tools/development" ]
release = [ "z-tokens-tools/release" ]




[dependencies]

z-tokens-tools = { path = "./tools", default-features = false, features = [] }


