
[package]

name = "token-generator"
version = "0.1.0"
publish = false

edition = "2021"
rust-version = "1.65"
resolver = "2"

autobins = false
autoexamples = false
autotests = false
autobenches = false




[dependencies]
vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }
vrl-random = { version = "*", default-features = false, features = [] }
rand = { version = "*", default-features = false, features = ["std", "std_rng", "getrandom", "small_rng"] }
num-bigint = { version = "*", default-features = false, features = ["std"] }
num-traits = { version = "*", default-features = false, features = ["std"] }
paste = { version = "*", default-features = false, features = [] }
argparse = { version = "*", default-features = false, features = [] }




[[bin]]
name = "token-generator"
path = "./bin.rs"

[lib]
name = "token_generator"
path = "./lib.rs"




[patch.crates-io]

vrl-errors = { path = "../.dependencies/volution-rust-libraries/errors" }
vrl-preludes = { path = "../.dependencies/volution-rust-libraries/preludes" }
vrl-random = { path = "../.dependencies/volution-rust-libraries/random" }








[profile.dev]
incremental = true
codegen-units = 1024
opt-level = 0
lto = "off"
debug = 2
debug-assertions = true
overflow-checks = true
panic = "unwind"
split-debuginfo = "unpacked"

[profile.test]
incremental = true
codegen-units = 1024
opt-level = 0
lto = "off"
debug = 2
debug-assertions = true
overflow-checks = true
split-debuginfo = "unpacked"

[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
debug-assertions = false
overflow-checks = true
panic = "abort"
split-debuginfo = "off"

[profile.bench]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
debug-assertions = false
overflow-checks = true
split-debuginfo = "unpacked"


[profile.dev.package."*"]
incremental = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
split-debuginfo = "unpacked"


[profile.dev.build-override]
incremental = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
split-debuginfo = "unpacked"


[profile.release.build-override]
incremental = false
codegen-units = 1
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = true
split-debuginfo = "unpacked"

