

[package]

name = "z-tokens-encodings-tool"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_encodings_tool"
path = "./lib.rs"




[features]

default = [
	"z-tokens-encodings/default",
	"z-tokens-runtime/default",
	"z-tokens-runtime-flags/default",
]

development = [
	"z-tokens-encodings/development",
	"z-tokens-runtime/development",
	"z-tokens-runtime-flags/development",
]

release = [
	"z-tokens-encodings/release",
	"z-tokens-runtime/release",
	"z-tokens-runtime-flags/release",
]




[dependencies]

z-tokens-encodings = { path = "../encodings", optional = false, default-features = false, features = [] }

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-flags = { path = "../runtime-flags", optional = false, default-features = false, features = [] }


