

[package]

name = "z-tokens-encodings"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_encodings"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
]

development = [
	"z-tokens-runtime/development",
]

release = [
	"z-tokens-runtime/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", default-features = false, features = [] }

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }

data-encoding = { version = "^2.3", default-features = false, features = ["std"] }
bech32 = { version = "^0.9", default-features = false, features = ["std"] }
bs58 = { version = "^0.4", default-features = false, features = ["std"] }
z85 = { version = "^3.0", default-features = false, features = [] }
mnemonic = { version = "^1.0", default-features = false, features = [] }
qrcode = { version = "^0.12", default-features = false, features = [] }


