

[package]

name = "z-tokens-encodings"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_encodings"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
	"z-tokens-runtime-codings/default",
]

development = [
	"z-tokens-runtime/development",
	"z-tokens-runtime-codings/development",
]

release = [
	"z-tokens-runtime/release",
	"z-tokens-runtime-codings/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-codings = { path = "../runtime-codings", optional = false, default-features = false, features = [] }


