

[package]

name = "z-tokens-exchange-tool"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_exchange_tool"
path = "./lib.rs"




[features]

default = [
	"z-tokens-exchange/default",
	"z-tokens-runtime/default",
	"z-tokens-runtime-flags/default",
]

development = [
	"z-tokens-exchange/development",
	"z-tokens-runtime/development",
	"z-tokens-runtime-flags/development",
]

release = [
	"z-tokens-exchange/release",
	"z-tokens-runtime/release",
	"z-tokens-runtime-flags/release",
]




[dependencies]

z-tokens-exchange = { path = "../exchange", optional = false, default-features = false, features = [] }

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-flags = { path = "../runtime-flags", optional = false, default-features = false, features = [] }

z-tokens-runtime-pinentry = { path = "../runtime-pinentry", optional = false, default-features = false, features = [] }

[target.'cfg( all( target_os = "linux", target_env = "gnu" ) )'.dependencies]
z-tokens-runtime-lkkrs = { path = "../runtime-lkkrs", optional = false, default-features = false, features = [] }


