

[package]

name = "z-tokens-exchange"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_exchange"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
	"z-tokens-runtime-random/default",
	"z-tokens-runtime-hashes/default",
	"z-tokens-runtime-codings/default",
]

development = [
	"z-tokens-runtime/development",
	"z-tokens-runtime-random/development",
	"z-tokens-runtime-hashes/development",
	"z-tokens-runtime-codings/development",
]

release = [
	"z-tokens-runtime/release",
	"z-tokens-runtime-random/release",
	"z-tokens-runtime-hashes/release",
	"z-tokens-runtime-codings/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [
		"zt-runtime-crypto",
		"zt-runtime-memory",
		"zt-runtime-sensitive",
	] }

z-tokens-runtime-random = { path = "../runtime-random", optional = false, default-features = false, features = [] }
z-tokens-runtime-hashes = { path = "../runtime-hashes", optional = false, default-features = false, features = [] }
z-tokens-runtime-codings = { path = "../runtime-codings", optional = false, default-features = false, features = [] }

x25519-dalek = { version = "^2.0", optional = false, default-features = false, features = [] }
chacha20 = { version = "^0.9", optional = false, default-features = false, features = ["std"] }
constant_time_eq = { version = "^0.2", optional = false, default-features = false, features = [] }
tokio = { version = "^1.25", optional = false, default-features = false, features = ["rt", "net"] }




[target.'cfg(any( all(target_os = "linux", target_env = "gnu"), target_os = "android" ))'.dependencies]
russh-keys = { version = "^0.38", optional = false, default-features = false, features = ["vendored-openssl"] }

[target.'cfg(any( all(target_os = "linux", target_env = "musl"), target_os = "macos" ))'.dependencies]
russh-keys = { version = "^0.38", optional = false, default-features = false, features = [] }


