

[package]

name = "z-tokens-exchange"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_exchange"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
	"z-tokens-runtime-random/default",
	"z-tokens-runtime-hashes/default",
	"z-tokens-runtime-crypto/default",
	"z-tokens-runtime-codings/default",
]

development = [
	"z-tokens-runtime/development",
	"z-tokens-runtime-random/development",
	"z-tokens-runtime-hashes/development",
	"z-tokens-runtime-crypto/development",
	"z-tokens-runtime-codings/development",
]

release = [
	"z-tokens-runtime/release",
	"z-tokens-runtime-random/release",
	"z-tokens-runtime-hashes/release",
	"z-tokens-runtime-crypto/release",
	"z-tokens-runtime-codings/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-random = { path = "../runtime-random", optional = false, default-features = false, features = [] }
z-tokens-runtime-hashes = { path = "../runtime-hashes", optional = false, default-features = false, features = [] }
z-tokens-runtime-crypto = { path = "../runtime-crypto", optional = false, default-features = false, features = [] }
z-tokens-runtime-codings = { path = "../runtime-codings", optional = false, default-features = false, features = [] }

[target.'cfg( all( target_os = "linux", target_env = "gnu" ) )'.dependencies]
russh-keys = { version = "^0.40", optional = false, default-features = false, features = ["vendored-openssl"] }
tokio = { version = "^1.35", optional = false, default-features = false, features = ["rt", "net"] }

[target.'cfg( all( target_os = "linux", target_env = "musl" ) )'.dependencies]
russh-keys = { version = "^0.40", optional = false, default-features = false, features = [] }
tokio = { version = "^1.35", optional = false, default-features = false, features = ["rt", "net"] }

[target.'cfg( all( target_os = "android", not (target_arch = "x86") ) )'.dependencies]
russh-keys = { version = "^0.40", optional = false, default-features = false, features = ["vendored-openssl"] }
tokio = { version = "^1.35", optional = false, default-features = false, features = ["rt", "net"] }

[target.'cfg( all( target_os = "android", target_arch = "x86") )'.dependencies]
russh-keys = { version = "^0.40", optional = false, default-features = false, features = [] }
tokio = { version = "^1.35", optional = false, default-features = false, features = ["rt", "net"] }

[target.'cfg( any( target_os = "macos" ) )'.dependencies]
russh-keys = { version = "^0.40", optional = false, default-features = false, features = [] }
tokio = { version = "^1.35", optional = false, default-features = false, features = ["rt", "net"] }


