

[package]

name = "z-tokens-exchange"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_exchange"
path = "./lib.rs"




[features]

default = [
	"zt-exchange-ssh",
	"z-tokens-runtime/default",
	"z-tokens-runtime-random/default",
	"z-tokens-runtime-hashes/default",
	"z-tokens-runtime-crypto/default",
	"z-tokens-runtime-codings/default",
]

development = [
	"zt-exchange-ssh",
	"z-tokens-runtime/development",
	"z-tokens-runtime-random/development",
	"z-tokens-runtime-hashes/development",
	"z-tokens-runtime-crypto/development",
	"z-tokens-runtime-codings/development",
]

release = [
	"zt-exchange-ssh",
	"z-tokens-runtime/release",
	"z-tokens-runtime-random/release",
	"z-tokens-runtime-hashes/release",
	"z-tokens-runtime-crypto/release",
	"z-tokens-runtime-codings/release",
]

zt-exchange-ssh = []




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-random = { path = "../runtime-random", optional = false, default-features = false, features = [] }
z-tokens-runtime-hashes = { path = "../runtime-hashes", optional = false, default-features = false, features = [] }
z-tokens-runtime-crypto = { path = "../runtime-crypto", optional = false, default-features = false, features = [] }
z-tokens-runtime-codings = { path = "../runtime-codings", optional = false, default-features = false, features = [] }

[target.'cfg( not( any( target_os = "wasi", target_os = "windows" ) ) )'.dependencies]
russh-keys = { version = "^0.45", optional = false, default-features = false, features = [] }
tokio = { version = "^1.40", optional = false, default-features = false, features = ["rt", "net"] }


