

[package]

name = "z-tokens-hashes-tool"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_hashes_tool"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
]

development = [
	"z-tokens-runtime/development",
]

release = [
	"z-tokens-runtime/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", default-features = false, features = ["zt-runtime-flags"] }

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }

digest = { version = "^0.10", default-features = false, features = ["std", "core-api"] }

blake3 = { version = "^1.3", default-features = false, features = ["std", "digest", "traits-preview"] }
blake2 = { version = "^0.10", default-features = false, features = ["std"] }

sha3 = { version = "^0.10", default-features = false, features = ["std"] }
sha2 = { version = "^0.10", default-features = false, features = ["std", "asm"] }
sha1 = { version = "^0.10", default-features = false, features = ["std", "asm"] }

md-5 = { version = "^0.10", default-features = false, features = ["std", "asm"] }

twox-hash = { version = "^1.6", default-features = false, features = ["std"] }

argon2 = { version = "^0.4", default-features = false, features = ["std"] }

byteorder = { version = "^1.4", default-features = false, features = [] }


