

[package]

name = "z-tokens-hashes"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_hashes"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
	"z-tokens-runtime-flags/default",
]

development = [
	"z-tokens-runtime-flags/development",
]

release = [
	"z-tokens-runtime/release",
	"z-tokens-runtime-flags/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-flags = { path = "../runtime-flags", optional = false, default-features = false, features = [] }

digest = { version = "^0.10", optional = false, default-features = false, features = ["std", "core-api"] }

blake3 = { version = "^1.3", optional = false, default-features = false, features = ["std", "digest", "traits-preview"] }
blake2 = { version = "^0.10", optional = false, default-features = false, features = ["std"] }

sha3 = { version = "^0.10", optional = false, default-features = false, features = ["std"] }
sha2 = { version = "^0.10", optional = false, default-features = false, features = ["std", "asm"] }
sha1 = { version = "^0.10", optional = false, default-features = false, features = ["std", "asm"] }

md-5 = { version = "^0.10", optional = false, default-features = false, features = ["std", "asm"] }

twox-hash = { version = "^1.6", optional = false, default-features = false, features = [] }
siphasher = { version = "^0.3", optional = false, default-features = false, features = [] }
seahash = { version = "^4.1", optional = false, default-features = false, features = [] }
highway = { version = "^0.8", optional = false, default-features = false, features = ["std"] }

crc-any = { version = "^2.4", optional = false, default-features = false, features = [] }
adler = { version = "^1.0", optional = false, default-features = false, features = [] }
hashers = { version = "^1.0", optional = false, default-features = false, features = [] }

argon2 = { version = "^0.4", optional = false, default-features = false, features = ["std"] }
scrypt = { version = "^0.10", optional = false, default-features = false, features = ["std"] }

byteorder = { version = "^1.4", optional = false, default-features = false, features = [] }


