

[package]

name = "z-tokens-hashes"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_hashes"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
	"z-tokens-runtime-flags/default",
	"z-tokens-runtime-codings/default",
	"z-tokens-runtime-hashes/default",
]

development = [
	"z-tokens-runtime/development",
	"z-tokens-runtime-flags/development",
	"z-tokens-runtime-codings/development",
	"z-tokens-runtime-hashes/development",
]

release = [
	"z-tokens-runtime/release",
	"z-tokens-runtime-flags/release",
	"z-tokens-runtime-codings/release",
	"z-tokens-runtime-hashes/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-flags = { path = "../runtime-flags", optional = false, default-features = false, features = [] }
z-tokens-runtime-codings = { path = "../runtime-codings", optional = false, default-features = false, features = [] }
z-tokens-runtime-hashes = { path = "../runtime-hashes", optional = false, default-features = false, features = [] }


