

[package]

name = "z-tokens-oracles-tool"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_oracles_tool"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
]

development = [
	"z-tokens-runtime/development",
	"zt-oracles-pkcs11",
]

release = [
	"z-tokens-runtime/release",
]

zt-oracles-pkcs11 = [
	"rsa",
	"pkcs1",
	"cryptoki",
	"cryptoki-sys",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", default-features = false, features = [
		"zt-runtime-flags",
		"zt-runtime-rpc",
		"zt-runtime-sensitive",
	] }

vrl-errors = { version = "*", default-features = false, features = [] }
vrl-preludes = { version = "*", default-features = false, features = [] }

ed25519-dalek = { version = "^2.1", optional = true, default-features = false, features = ["std"] }
x25519-dalek = { version = "^2.0", optional = true, default-features = false, features = [] }

rsa = { version = "^0.8", optional = true, default-features = false, features = ["std", "pem"] }
pkcs1 = { version = "^0.4", optional = true, default-features = false, features = ["std", "pem"] }

[target.'cfg(any( all(target_os = "linux", target_env = "gnu"), target_os = "macos" ))'.dependencies]
cryptoki = { version = "^0.4", optional = true, default-features = false, features = [] }
cryptoki-sys = { version = "^0.1", optional = true, default-features = false, features = [] }


