

[package]

name = "z-tokens-oracles-tool"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_oracles_tool"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
	"z-tokens-runtime-flags/default",
	"z-tokens-oracles/default",
]

development = [
	"z-tokens-runtime/development",
	"z-tokens-runtime-flags/development",
	"z-tokens-oracles/default",
]

release = [
	"z-tokens-runtime/release",
	"z-tokens-runtime-flags/release",
	"z-tokens-oracles/release",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-flags = { path = "../runtime-flags", optional = false, default-features = false, features = [] }
z-tokens-oracles = { path = "../oracles", optional = false, default-features = false, features = [] }

