

[package]

name = "z-tokens-oracles"

workspace = "../workspace"

autobins = false
autoexamples = false
autotests = false
autobenches = false

version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true




[lib]

name = "z_tokens_oracles"
path = "./lib.rs"




[features]

default = [
	"z-tokens-runtime/default",
	"z-tokens-runtime-crypto/default",
]

development = [
	"z-tokens-runtime/development",
	"z-tokens-runtime-crypto/development",
#!	"zt-oracles-pkcs11",
]

release = [
	"z-tokens-runtime/release",
	"z-tokens-runtime-crypto/release",
]

zt-oracles-pkcs11 = [
	"cryptoki",
	"cryptoki-sys",
]




[dependencies]

z-tokens-runtime = { path = "../runtime", optional = false, default-features = false, features = [] }
z-tokens-runtime-crypto = { path = "../runtime-crypto", optional = false, default-features = false, features = [] }

cryptoki = { version = "^0.6", optional = true, default-features = false, features = [] }
cryptoki-sys = { version = "^0.1", optional = true, default-features = false, features = [] }


